--- a/app/src/main/res/layout/activity_my_settings.xml
+++ b/app/src/main/res/layout/activity_my_settings.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="678dp"
+        android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
@@ -40,6 +40,8 @@
         <Button
             android:id="@+id/confirmChanges"
             android:layout_width="match_parent"
+            android:backgroundTint="@color/mainTheme"
+            android:textColor="@color/myGold"
             android:layout_height="wrap_content"
             android:text="Confirm Changes" />
     </LinearLayout>
