--- a/app/src/main/res/layout/activity_coinz_home.xml
+++ b/app/src/main/res/layout/activity_coinz_home.xml
@@ -34,9 +34,10 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.671">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -51,8 +52,9 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:backgroundTint="#FFFF00"
+                android:backgroundTint="@color/mainTheme"
                 android:text="Let's Play!"
+                android:textColor="@color/myGold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -64,8 +66,9 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:backgroundTint="@color/mapDownloadBackgroundFALSE"
+                android:backgroundTint="@color/mainTheme"
                 android:text="Profile"
+                android:textColor="@color/myGold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -85,8 +88,9 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:backgroundTint="@color/mapboxBlue"
+                android:backgroundTint="@color/mainTheme"
                 android:text="Settings"
+                android:textColor="@color/myGold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -97,8 +101,9 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:backgroundTint="#55FF66"
+                android:backgroundTint="@color/mainTheme"
                 android:text="Open Wallet"
+                android:textColor="@color/myGold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -172,5 +177,22 @@
             android:background="@color/myGold" />
 
     </com.michaldrabik.tapbarmenulib.TapBarMenu>
+
+    <Button
+        android:id="@+id/storeButton"
+        android:layout_width="338dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/mainTheme"
+        android:text="One Stop Power-up Shop"
+        android:textColor="@color/myGold"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mapDownloadNotifier"
+        app:layout_constraintVertical_bias="0.685" />
 
 </android.support.constraint.ConstraintLayout>
